--- a/src/Our.Umbraco.ModularDevelopment/Our.Umbraco.ModularDevelopment.csproj
+++ b/src/Our.Umbraco.ModularDevelopment/Our.Umbraco.ModularDevelopment.csproj
@@ -406,6 +406,9 @@
   </Target>
   <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
   <Import Project="..\packages\UmbracoCms.7.5.4\build\UmbracoCms.targets" Condition="Exists('..\packages\UmbracoCms.7.5.4\build\UmbracoCms.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>IF $(ConfigurationName) == Debug xcopy "$(SolutionDir)..\etc\Demo_Content\*.*" "$(ProjectDir)" /Y /E /C /D</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
