Ditto integration of Promo Boxes

--- a/src/Our.Umbraco.ModularDevelopment/Our.Umbraco.ModularDevelopment.csproj
+++ b/src/Our.Umbraco.ModularDevelopment/Our.Umbraco.ModularDevelopment.csproj
@@ -344,6 +344,7 @@
     <Content Include="Config\BaseRestExtensions.config" />
     <Content Include="Config\applications.config" />
     <Content Include="Config\404handlers.config" />
+    <Content Include="Views\Partials\PromoBoxes.cshtml" />
     <Content Include="App_Plugins\NestedContent\package.manifest" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -380,7 +381,10 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComponentModel\ContentValueUmbracoUrlAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\PromoBoxesViewModel.cs" />
+    <Compile Include="ViewModels\PromoBoxViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
